# screencast

./: CMakeLists.txt  Config.vala.cmake  INSTALL  README  README.md  meson.build
cmake/: ParseArguments.cmake  README.Vala.rst
data/: CMakeLists.txt  com.github.artemanufrij.screencast.appdata.xml  com.github.artemanufrij.screencast.appdata.xml.in  com.github.artemanufrij.screencast.desktop  eidete.desktop  meson.build  videobin.contract
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.artemanufrij.screencast.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.mo  de.po  (+165 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
schemas/: CMakeLists.txt  com.github.artemanufrij.screencast.gschema.xml
src/: Application.vala  CMakeLists.txt  Config.vala.in  MainWindow.vala  Settings.vala  desktop_launcher.vala  eidete.vala  keycapture.c  meson.build  videobin_uploader.vala
src/Interfaces/: MediaKeys.vala
src/Widgets/: countdown.vala  end_dialog.vala  keyview.vala  selectionarea.vala
