install (FILES ${CMAKE_PROJECT_NAME}.desktop DESTINATION share/applications)

install (FILES icons/32/eidete.svg DESTINATION share/icons/hicolor/32x32/apps)
install (FILES icons/48/eidete.svg DESTINATION share/icons/hicolor/48x48/apps)
install (FILES icons/64/eidete.svg DESTINATION share/icons/hicolor/64x64/apps)
install (FILES icons/128/eidete.svg DESTINATION share/icons/hicolor/128x128/apps)
install (FILES icons/48/videobin.svg DESTINATION share/icons/hicolor/48x48/apps)

